; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_xld.c_PBI_XLD_Exit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pbi_xld.c_PBI_XLD_Exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xld_d_enabled = common dso_local global i8* null, align 8
@diskrom = common dso_local global i32 0, align 4
@FALSE = common dso_local global i8* null, align 8
@PBI_XLD_v_enabled = common dso_local global i8* null, align 8
@voicerom = common dso_local global i32 0, align 4
@PBI_XLD_enabled = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PBI_XLD_Exit() #0 {
  %1 = load i8*, i8** @xld_d_enabled, align 8
  %2 = icmp ne i8* %1, null
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i32, i32* @diskrom, align 4
  %5 = call i32 @free(i32 %4)
  %6 = load i8*, i8** @FALSE, align 8
  store i8* %6, i8** @xld_d_enabled, align 8
  br label %7

7:                                                ; preds = %3, %0
  %8 = load i8*, i8** @PBI_XLD_v_enabled, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load i32, i32* @voicerom, align 4
  %12 = call i32 @free(i32 %11)
  %13 = load i8*, i8** @FALSE, align 8
  store i8* %13, i8** @PBI_XLD_v_enabled, align 8
  br label %14

14:                                               ; preds = %10, %7
  %15 = load i8*, i8** @FALSE, align 8
  store i8* %15, i8** @PBI_XLD_enabled, align 8
  ret void
}

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
